Add android setup instructions